crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__misago__misago__core__templatetags__misago_absoluteurl.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/misago/misago/core/templatetags/misago_absoluteurl.py
---
tag_rules:
  "misago.core.templatetags.misago_absoluteurl::tag::absoluteurl":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: url_or_name
        required: true
        kind: Variable
        position: 0
      - name: args
        required: false
        kind: VarArgs
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
