crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__misago__misago__core__templatetags__misago_json.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/misago/misago/core/templatetags/misago_json.py
---
tag_rules: {}
filter_arities:
  "misago.core.templatetags.misago_json::filter::as_json":
    expects_arg: false
    arg_optional: false
block_specs: {}
