crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__misago__misago__core__templatetags__misago_shorthands.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/misago/misago/core/templatetags/misago_shorthands.py
---
tag_rules: {}
filter_arities:
  "misago.core.templatetags.misago_shorthands::filter::iffalse":
    expects_arg: true
    arg_optional: false
  "misago.core.templatetags.misago_shorthands::filter::iftrue":
    expects_arg: true
    arg_optional: false
block_specs: {}
